--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
-    <string name="app_name">SET</string>
+    <string name="appName">SET</string>
+    <string name="setCardGameText">SET Card Game</string>
     <string name="exitBtn">Exit</string>
-    <string name="scoreboardBtn">Scoreboard</string>
-    <string name="singleplayerBtn">Singleplayer</string>
-    <string name="multiplayerBtn">Multiplayer</string>
+    <string name="scoreboardText">Scoreboard</string>
+    <string name="singleplayerText">Singleplayer</string>
+    <string name="multiplayerText">Multiplayer</string>
     <string name="timerTextView">0:00</string>
     <string name="pointTextView">0</string>
     <string name="scoreTextView">SCORE</string>
+    <string name="scoreText">Score</string>
+    <string name="myScoreText">My Scores</string>
     <string name="contentDescriptionForCards">card</string>
     <string name="newGameBtn">New Game</string>
     <string name="backToMenuBtn">Menu</string>
@@ -14,23 +17,27 @@
     <string name="howToTitle">How To Play</string>
     <string name="easyBtn">Easy</string>
     <string name="normalBtn">Normal</string>
-    <string name="callSETBtn">SET</string>
     <string name="difficultyTextView">NORMAL</string>
     <string name="randomGameBtn">Random Game</string>
-    <string name="privateGameBtn">Private Game</string>
+    <string name="privateGameText">Private Game</string>
+    <string name="createPrivateGameText">Create Private Game</string>
+    <string name="chooseMultiTypeText">Choose Multiplayer Type</string>
+    <string name="multiTypeText">Multiplayer Type</string>
     <string name="connectionTextTV">CONNECTION CODE</string>
     <string name="waitingTV">SEARCHING FOR GAME</string>
+    <string name="waitingText">Searching For Game</string>
     <string name="stopWaitingBtn">STOP SEARCHING</string>
     <string name="deletePrivateGameBtn">DELETE GAME</string>
     <string name="joinGameBtn">Join Game</string>
     <string name="createGameBtn">Create Game</string>
     <string name="joinWithCodeBtn">Join</string>
+    <string name="joinGameText">Join Game</string>
     <string name="enterConnectionCodeText">ENTER CONNECTION CODE</string>
-    <string name="myScoresBtn">My Scores</string>
-    <string name="worldScoresBtn">World Scores</string>
+    <string name="worldScoresText">World Scores</string>
     <string name="backBtn">Back</string>
     <string name="won">WON</string>
     <string name="lost">LOST</string>
     <string name="meText">Me:</string>
     <string name="opponentText">Opponent:</string>
+    <string name="difficulty">Difficulty</string>
 </resources>
