--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="backBtn">Back</string>
     <string name="won">WON</string>
     <string name="lost">LOST</string>
+    <string name="draw">DRAW</string>
     <string name="meText">Me:</string>
     <string name="opponentText">Opponent:</string>
     <string name="difficulty">Difficulty</string>
